United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 6983240 guarantee((Solaris::min_stack_allowed >= (StackYellowPages+StackRedPages...) wrong
6983240 : guarantee((Solaris::min_stack_allowed >= (StackYellowPages+StackRedPages...) wrong

Details
Type:
Bug
Submit Date:
2010-09-08
Status:
Closed
Updated Date:
2012-10-08
Project Name:
JDK
Resolved Date:
2010-11-12
Component:
hotspot
OS:
linux,generic,solaris_10
Sub-Component:
runtime
CPU:
x86,sparc,generic
Priority:
P3
Resolution:
Fixed
Affected Versions:
hs19,5.0,6u14
Fixed Versions:
hs20

Related Reports
Backport:
Backport:
Duplicate:
Relates:
Relates:

Sub Tasks

Description
From email:

This customer has been testing it.. [increasing StackShadowPages]
The value of 4 worked OK but when they tried 5, the JVM crashed with a hs_err log.
The error was
#  Internal Error (os_solaris.cpp:4840), pid=6555, tid=2
#  Error: guarantee((Solaris::min_stack_allowed >= (StackYellowPages+StackRedPages+StackShadowPages+BytesPerWord +1) * page_size),"need to increase Solaris::min_stack_allowed on this platform")

They had -Xss set to 1024k.
ulimit in the shell was 8192.
What is the min_stack_allowed parameter?

                                    

Comments
EVALUATION

http://hg.openjdk.java.net/jdk7/build/hotspot/rev/b6aedd1acdc0
                                     
2010-12-04
EVALUATION

http://hg.openjdk.java.net/jdk7/hotspot-rt/hotspot/rev/b6aedd1acdc0
                                     
2010-10-07
EVALUATION

min_stack_allowed is a constant in the VM to document the minimum thread stack size that the VM needs to run.  The user gets an error during initialization if a smaller stack size is specified.

There was an assert that min_stack_allowed is greater than the size specified for StackShadowPages, as well as StackRedPages and StackYellowPages.  The assert should have been that the stack specified with -Xss was big enough to allow for these stack overflow protection pages or the minimum size, whichever is greater.
                                     
2010-09-21



Hardware and Software, Engineered to Work Together