6983240: guarantee((Solaris::min_stack_allowed >= (StackYellowPages+StackRedPages...) wrong

Min_stack_allowed is a compile time constant and Stack*Pages are settable

Reviewed-by: dholmes, kvn